--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                 <button class="header__menu-button" id="burger" type="button"><img src="imgs/burger.svg" alt="burger"
                         width="32" height="23"></button>
                 <a class="header__link" href="registration.html"><img src="imgs/reg.svg" alt="registarion"></a>
-                <a class="header__link header__link-position" href="cart.html"><img src="imgs/cart.svg" alt="cart">
+                <a class="header__link header__link--tablet-margin header__link-position" href="cart.html"><img
+                        src="imgs/cart.svg" alt="cart">
                     <img class="header__cartlist" src="imgs/cart-list.svg" alt="cart-list"></a>
                 <!--здесь с помощью JS будет отображаться количество товаров в корзине-->
                 <nav class="header__navigation header__navigation-none" id="menu">
@@ -78,7 +79,7 @@
                 </div>
             </div>
         </section>
-        <section class="stocks container">
+        <section class="stocks container container--tablet">
             <h2 class="visually-hidden">Stocks</h2>
             <ul class="stocks__list">
                 <li class="stocks__item stocks__item--woman">
@@ -107,7 +108,7 @@
                 </li>
             </ul>
         </section>
-        <section class="products container">
+        <section class="products container container--tablet">
             <div class="products__wrap-heading">
                 <h2 class="products__heading-heading">Fetured Items</h2>
                 <p class="products__heading-text">Shop for items based on what we feaured in this week</p>
@@ -195,7 +196,8 @@
                 <li class="features__item">
                     <img src="imgs/crown.svg" alt="crown" width="47" height="35">
                     <h3 class="features__item-heading">Quality assurance</h3>
-                    <p class="features__item-text">Worldwide delivery on all. Authorit tively morph next-generation
+                    <p class="features__item-text features__item-text--padding">Worldwide delivery on all. Authorit
+                        tively morph next-generation
                         innov tion with extensive
                         models.</p>
                 </li>
