deleted inline-styles in photo carts

--- a/cart.html
+++ b/cart.html
@@ -80,7 +80,7 @@
                 <div class="cart-list__wrapper">
                     <div class="cart-block">
                         <div class="cart-block__img-wrapper cart-img"><img class="cart-img__img"
-                                src="./imgs/man-cart1.jpg" alt="man-cart1" width="" height=""></div>
+                                src="./imgs/man-cart1.jpg" alt="man-cart1"></div>
                         <div class="cart-block__block-items cart-items">
                             <h3 class="cart-items__heading-cart">MANGO PEOPLE T-SHIRT</h3>
                             <ul class="cart-items__list-desc desc-items">
@@ -101,7 +101,7 @@
                     </div>
                     <div class="cart-block">
                         <div class="cart-block__img-wrapper cart-img"><img class="cart-img__img"
-                                src="./imgs/man-cart2.jpg" alt="man-cart2" width="" height=""></div>
+                                src="./imgs/man-cart2.jpg" alt="man-cart2"></div>
                         <div class="cart-block__block-items cart-items">
                             <h3 class="cart-items__heading-cart">MANGO PEOPLE T-SHIRT</h3>
                             <ul class="cart-items__list-desc desc-items">
