--- a/product.html
+++ b/product.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>shop</title>
+    <title>product</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400&display=swap"
         rel="stylesheet">
@@ -17,18 +18,18 @@
     <header class="header">
         <div class="header__wrapper container">
             <div>
-                <img class="header__logo" src="imgs/logo.svg" alt="logo" width="44" height="38">
+                <a href="index.html"><img class="header__logo" src="imgs/logo.svg" alt="logo" width="44"
+                        height="38"></a>
                 <img class="header__loupe" src="imgs/loupe.svg" alt="loupe" width="26" height="27">
             </div>
             <div>
                 <button class="header__menu-button" id="burger" type="button"><img src="imgs/burger.svg" alt="burger"
                         width="32" height="23"></button>
                 <a class="header__link" href="registration.html"><img src="imgs/reg.svg" alt="registarion"></a>
-                <a class="header__link header__link--tablet-margin header__link-position" href="cart.html"><img
-                        src="imgs/cart.svg" alt="cart">
+                <a class="header__link header__link-position" href="#"><img src="imgs/cart.svg" alt="cart">
                     <img class="header__cartlist" src="imgs/cart-list.svg" alt="cart-list"></a>
                 <!--здесь с помощью JS будет отображаться количество товаров в корзине-->
-                <nav class="header__navigation header__navigation-none" id="menu">
+                <nav class="header__navigation-none" id="menu">
                     <button class="header__navigation-button" id="close"><img src="imgs/close-menu.svg"
                             alt="close"></button>
                     <h2 class="header__navigation-title">menu</h2>
@@ -68,82 +69,70 @@
             </div>
         </div>
     </header>
-    <main>
-        <section class="brand">
-            <div id="brand__wrapper-animation" class="brand__wrapper">
-                <img class=" brand__image" src="imgs/man-title.jpg" alt="man-title" width="800" height="765">
-                <!--при клике на FASHION будет ввести на весь каталог товаров, я так понимаю все что розовое на странице это все юзабильное, хорошо для СЕО будет.-->
-                <div class="brand__heading-wrapper">
-                    <h1 class="brand__heading">the brand<span class="brand__heading--text"><br>of luxerious<span
-                                class="brand__heading-text-pink"> fashion</span></span></h1>
+    <main class="product">
+        <section class="product__heading heading-block">
+            <div class="heading-block container container--tablet">
+                <h1 class="heading-block__heading">NEW ARRIVALS</h1>
+                <nav aria-label="breadcrumb product__breadcrumb">
+                    <ol class="breadcrumb product__breadcrum-list">
+                        <li class="breadcrumb-item"><a class="breadcrumb-item__item-link" href="#">HOME</a></li>
+                        <li class="breadcrumb-item "><a class="breadcrumb-item__item-link" href="#">MEN</a></li>
+                        <li class="breadcrumb-item active" aria-current="page"><a
+                                class="breadcrumb-item__item-link active--pink" href="#">NEW
+                                ARRIVALS</a>
+                        </li>
+                    </ol>
+                </nav>
+            </div>
+        </section>
+        <section class="product__slider">
+            <div id="carousel-main" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner carousel-inner-center">
+                    <div class="carousel-item active">
+                        <img src="imgs/slider-girl.jpg" class="product__slider-item" alt="slider-girl">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imgs/slider-girl.jpg" class="product__slider-item" alt="slider-girl">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imgs/slider-girl.jpg" class="product__slider-item" alt="slider-girl">
+                    </div>
                 </div>
+                <button class="carousel-control-prev icon-pos-left" type="button" data-bs-target="#carousel-main"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next icon-pos-right" type="button" data-bs-target="#carousel-main"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
         </section>
-        <section class="stocks container container--tablet">
-            <h2 class="visually-hidden">Stocks</h2>
-            <ul class="stocks__list">
-                <li class="stocks__item stocks__item--woman">
-                    <a class="stocks__item-link" href="product.html">
-                        <p class="stocks__item-text">30% OFF</p>
-                        <h3 class="stocks__item-header">FOR WOMAN</h3>
-                    </a>
-                </li>
-                <li class="stocks__item stocks__item--man">
-                    <a class="stocks__item-link" href="product.html">
-                        <p class="stocks__item-text">HOT DEAL</p>
-                        <h3 class="stocks__item-header">FOR MEN</h3>
-                    </a>
-                </li>
-                <li class="stocks__item stocks__item--kids">
-                    <a class="stocks__item-link" href="product.html">
-                        <p class="stocks__item-text">NEW ARRIVALS</p>
-                        <h3 class="stocks__item-header">FOR KIDS</h3>
-                    </a>
-                </li>
-                <li class="stocks__item stocks__item--accessories">
-                    <a class="stocks__item-link" href="product.html">
-                        <p class="stocks__item-text">LUXIROUS & TRENDY</p>
-                        <h3 class="stocks__item-header">ACCESORIES</h3>
-                    </a>
-                </li>
-            </ul>
-        </section>
-        <section class="products container container--tablet">
-            <div class="products__wrap-heading">
-                <h2 class="products__heading-heading">Fetured Items</h2>
-                <p class="products__heading-text">Shop for items based on what we feaured in this week</p>
+        <section class="product__meta">
+            <div class="product__meta-wrapper meta-items">
+                <h1 class="meta-items__heading-name">WOMEN COLLECTION</h1>
+                <hr class="meta-items__heading-hr">
+                <h2 class="meta-items__heading-subname">MOSCHINO CHEAP AND CHIC</h2>
+                <p class="meta-items__text">Compellingly actualize fully researched processes before proactive
+                    outsourcing.<br class="meta-items__text-br--desktop">Progressively
+                    syndicate
+                    collaborative architectures before cutting-edge services. Completely visualize parallel core
+                    competencies rather than exceptional portals.
+                </p>
+                <p class="meta-items__price"><span class="meta-items__price--value">$561</span></p>
+                <hr class="meta-items__hr">
+                <ul class="meta-items__list meta-names-list">
+                    <li class="meta-names-list__item">CHOOSE COLOR</li>
+                    <li class="meta-names-list__item">CHOOSE SIZE </li>
+                    <li class="meta-names-list__item">QUANTITY</li>
+                </ul>
+                <button class="meta-items__button">Add to Cart</button>
             </div>
-            <ul class="products__list">
-                <li class="products__item">
-                    <div class="products__item-img--wrapper">
-                        <img class="products__item-img" src="imgs/card1.jpg" alt="card1" width="360" height="420">
-                    </div>
-                    <h3 class="products__item-heading">ELLERY X M'O CAPSULE</h3>
-                    <p class="products__item-text">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                    <p class="products__item-text-pink">$52.00</p>
-                    <button class="products__item-button" type="button">Add to Cart</button>
-                </li>
-                <li class="products__item">
-                    <div class="products__item-img--wrapper">
-                        <img class="products__item-img" src="imgs/card2.jpg" alt="card1" width="360" height="420">
-                    </div>
-                    <h3 class="products__item-heading">ELLERY X M'O CAPSULE</h3>
-                    <p class="products__item-text">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                    <p class="products__item-text-pink">$52.00</p>
-                    <button class="products__item-button" type="button">Add to Cart</button>
-                </li>
-                <li class="products__item">
-                    <div class="products__item-img--wrapper">
-                        <img class="products__item-img" src="imgs/card3.jpg" alt="card1" width="360" height="420">
-                    </div>
-                    <h3 class="products__item-heading">ELLERY X M'O CAPSULE</h3>
-                    <p class="products__item-text">Known for her sculptural takes on traditional tailoring, Australian
-                        arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
-                    <p class="products__item-text-pink">$52.00</p>
-                    <button class="products__item-button" type="button">Add to Cart</button>
-                </li>
+        </section>
+        <section class="products products-container-bootstrap-fix">
+            <ul class="products__list products__list--product">
                 <li class="products__item">
                     <div class="products__item-img--wrapper">
                         <img class="products__item-img" src="imgs/card4.jpg" alt="card1" width="360" height="420">
@@ -154,9 +143,9 @@
                     <p class="products__item-text-pink">$52.00</p>
                     <button class="products__item-button" type="button">Add to Cart</button>
                 </li>
-                <li class="products__item">
+                <li class="products__item products__item--tablet-none-man">
                     <div class="products__item-img--wrapper">
-                        <img class="products__item-img" src="imgs/card5.jpg" alt="card1" width="360" height="420">
+                        <img class="products__item-img" src="imgs/card3.jpg" alt="card1" width="360" height="420">
                     </div>
                     <h3 class="products__item-heading">ELLERY X M'O CAPSULE</h3>
                     <p class="products__item-text">Known for her sculptural takes on traditional tailoring, Australian
@@ -164,7 +153,7 @@
                     <p class="products__item-text-pink">$52.00</p>
                     <button class="products__item-button" type="button">Add to Cart</button>
                 </li>
-                <li class="products__item">
+                <li class="products__item products__item--tablet-none-girl">
                     <div class="products__item-img--wrapper">
                         <img class="products__item-img" src="imgs/card6.jpg" alt="card1" width="360" height="420">
                     </div>
@@ -175,37 +164,9 @@
                     <button class="products__item-button" type="button">Add to Cart</button>
                 </li>
             </ul>
-            <a class="products__link" href="product.html">Browse All Product</a>
-        </section>
-        <section class="features">
-            <h2 class="visually-hidden">sales & discounts</h2>
-            <ul class="features__list container">
-                <li class="features__item"><img src="imgs/car.svg" alt="car" width="45" height="32">
-                    <h3 class="features__item-heading">Free Delivery</h3>
-                    <p class="features__item-text">Worldwide delivery on all. Authorit tively morph next-generation
-                        innov tion with extensive
-                        models.</p>
-                </li>
-                <li class="features__item">
-                    <img src="imgs/percent.svg" alt="percent" width="40" height="40">
-                    <h3 class="features__item-heading">Sales & discounts</h3>
-                    <p class="features__item-text">Worldwide delivery on all. Authorit tively morph next-generation
-                        innov tion with extensive
-                        models.</p>
-                </li>
-                <li class="features__item">
-                    <img src="imgs/crown.svg" alt="crown" width="47" height="35">
-                    <h3 class="features__item-heading">Quality assurance</h3>
-                    <p class="features__item-text features__item-text--padding">Worldwide delivery on all. Authorit
-                        tively morph next-generation
-                        innov tion with extensive
-                        models.</p>
-                </li>
-            </ul>
         </section>
     </main>
     <footer class="footer">
-
         <div class="footer__wrap container">
             <section class="footer__quote">
                 <h2 class="visually-hidden">reviews</h2>
@@ -226,7 +187,6 @@
             <div class="footer__info-wrap container">
                 <h2 class="visually-hidden">copyright</h2>
                 <p class="footer__info-copy">© 2021 Brand All Rights Reserved.</p>
-
                 <ul class="footer__socials-list">
                     <li class="footer__socials-item"><a href="#"><img src="imgs/facebook.svg" alt="facebook" width="32"
                                 height="32"></a></li>
@@ -242,7 +202,8 @@
 
     </footer>
 
-    <script src="scripts/modal-index.js"></script>
+    <script src="scripts/bootstrap.min.js"></script>
+    <script src="scripts/modal-all.js"></script>
 
 </body>
 
